--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,3 +1,13 @@
 <div class="list-group" >
-    <a *ngFor="let item of categories" href="" class="list-group-item list-group-item-action ">{{item.name}} </a>
+    <a  (click)="selectCategory()"
+        href="#"
+        [class.active]="displayAll"
+        class="list-group-item list-group-item-action ">Tüm Kategoriler
+    </a>
+    
+    <a *ngFor="let item of categories"
+      href="#" 
+      [class.active]="!displayAll && selectedCategory.id==item.id"
+     (click)="selectCategory(item)"
+     class="list-group-item list-group-item-action ">{{item.name}} </a>
 </div>
