--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,13 +1,14 @@
 <div class="list-group" >
-    <a  (click)="selectCategory()"
-        href="#"
+    <a  
+        routerLink="movies"
+        (click)="selectCategory()"
         [class.active]="displayAll"
         class="list-group-item list-group-item-action ">Tüm Kategoriler
     </a>
     
     <a *ngFor="let item of categories"
-      href="#" 
-      [class.active]="!displayAll && selectedCategory.id==item.id"
-     (click)="selectCategory(item)"
-     class="list-group-item list-group-item-action ">{{item.name}} </a>
+        routerLink="movies/category/{{item.id}}"
+        [class.active]="!displayAll && selectedCategory.id==item.id"
+        (click)="selectCategory(item)"
+        class="list-group-item list-group-item-action ">{{item.name}} </a>
 </div>
