--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <a href="#" class="navbar-brand"> Movie App</a>
         <ul class="navbar-nav me-auto ">
-            <a href="" class="nav-link active">Home</a>
-            <a href="" class="nav-link active">About</a>
+            <a routerLink="/movies" class="nav-link active">Home</a>
+            <a  class="nav-link active">About</a>
         </ul>
     </div>
 </nav>
