--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <a href="#" class="navbar-brand"> Movie App</a>
         <ul class="navbar-nav me-auto ">
             <a routerLink="/movies" class="nav-link active">Home</a>
-            <a  class="nav-link active">About</a>
+            <a  routerLink="/movies/create" class="nav-link active">About</a>
         </ul>
     </div>
 </nav>
