--- a/src/app/movie-create/movie-create.component.html
+++ b/src/app/movie-create/movie-create.component.html
@@ -1,27 +1,45 @@
 <h1>Film Ekle</h1>
 
-<form>
+<form #form="ngForm" (ngSubmit)="createMovie()">
 
     <div class="mb-3">
         <label for="title" class="form-label">Başlık</label>
-        <input #title type="text" class="form-control">
+        <input required minlength="5" #title="ngModel" (change)="log(title)" [(ngModel)]="model.title" type="text" class="form-control" name="title">
+        <div class="alert alert-danger" *ngIf="title.invalid && title.touched">
+            <p *ngIf="title.errors.required"> Bu alan boş bırakılamaz</p>
+            <p *ngIf="title.errors.minlength">Mininmum beş karakter girişi yapmalısınız.</p>
+        </div>
+        
+        <!-- <span class="badge bg-danger" *ngIf="title.invalid && title.touched">Gerekli Alan</span> -->
+       
+         
     </div>
     <div class="mb-3">
         <label for="description" class="form-label">Açıklama</label>
-        <textarea #description name="" id="" cols="30" rows="10" class="form-control"></textarea>
+        <textarea required [(ngModel)]="model.description" name="" id="" cols="30" rows="10" class="form-control" name="description" #description="ngModel"></textarea>
+        <div class="alert alert-danger" *ngIf="description.invalid && description.touched">
+            Gerekli Alan.
+        </div>
     </div>
     <div class="mb-3">
         <label for="imageUrl" class="form-label">Resim</label>
-        <input #image type="text" class="form-control">
+        <input required [(ngModel)]="model.imageUrl" type="text" class="form-control" name="imageUrl" #imageUrl="ngModel">
+        <div class="alert alert-danger" *ngIf="imageUrl.invalid && imageUrl.touched">
+            Gerekli Alan.
+        </div>
     </div>
     <div class="mb-3">
         <label for="categoryId" class="form-label">Kategori Seçiniz.</label>
-        <select #categoryId class="form-select">
-            <option *ngFor="let item of categories" [value]="item.id">{{item.name}}</option>
+        <select required name="categoryId" [(ngModel)]="model.categoryId" class="form-select" #categoryId="ngModel">
+            <option value="">Seçiniz</option>
+            <option *ngFor="let item of categories" [value]="item.id">{{item.name}} </option>
         </select>
+        <div class="alert alert-danger" *ngIf="categoryId.invalid && categoryId.touched">
+            Gerekli Alan.
+        </div>
     </div>
 
-    <button (click)="createMovie(title,description,image,categoryId)" class="btn btn-primary"> Kaydet </button>
+    <button [disabled]="form.invalid" type="submit"  class="btn btn-primary"> Kaydet </button>
 
 
 </form>
