--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 
     @import "~alertifyjs/build/css/alertify.min.css";
     @import "~alertifyjs/build/css/themes/bootstrap.min.css";
+    @import "assets/forms.css";
