--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,9 @@
     <div class="container">
         <a href="#" class="navbar-brand"> Movie App</a>
         <ul class="navbar-nav me-auto ">
-            <a routerLink="/movies" class="nav-link active">Home</a>
-            <a  routerLink="/movies/create" class="nav-link active">About</a>
+            <a routerLink="/movies" class="nav-link active">Anasayfa</a>
+            <a  routerLink="/movies/create" class="nav-link active">Film Ekle</a>
+            <a routerLink="/categories/create" class="nav-link" > Kategori Ekle</a>
         </ul>
     </div>
 </nav>
