--- a/src/app/movie-create/movie-create.component.html
+++ b/src/app/movie-create/movie-create.component.html
@@ -1,45 +1,35 @@
 <h1>Film Ekle</h1>
 
-<form #form="ngForm" (ngSubmit)="createMovie()">
+<form [formGroup]="movieForm" (ngSubmit)="createMovie()">
 
     <div class="mb-3">
         <label for="title" class="form-label">Başlık</label>
-        <input required minlength="5" #title="ngModel" (change)="log(title)" [(ngModel)]="model.title" type="text" class="form-control" name="title">
-        <div class="alert alert-danger" *ngIf="title.invalid && title.touched">
-            <p *ngIf="title.errors.required"> Bu alan boş bırakılamaz</p>
-            <p *ngIf="title.errors.minlength">Mininmum beş karakter girişi yapmalısınız.</p>
+        <input type="text" class="form-control" name="title" formControlName="title">
+        <div class="alert alert-danger" *ngIf="movieForm.get('title').invalid && movieForm.get('title').touched">
+            <p *ngIf="movieForm.get('title').errors.required"> Bu alan boş bırakılamaz</p>
+            <p *ngIf="movieForm.get('title').errors.minlength">Mininmum beş karakter girişi yapmalısınız.</p>
         </div>
-        
-        <!-- <span class="badge bg-danger" *ngIf="title.invalid && title.touched">Gerekli Alan</span> -->
-       
-         
+
     </div>
     <div class="mb-3">
         <label for="description" class="form-label">Açıklama</label>
-        <textarea required [(ngModel)]="model.description" name="" id="" cols="30" rows="10" class="form-control" name="description" #description="ngModel"></textarea>
-        <div class="alert alert-danger" *ngIf="description.invalid && description.touched">
-            Gerekli Alan.
-        </div>
+        <textarea   cols="30" rows="10" class="form-control" name="description" formControlName="description" ></textarea>
+        
     </div>
     <div class="mb-3">
         <label for="imageUrl" class="form-label">Resim</label>
-        <input required [(ngModel)]="model.imageUrl" type="text" class="form-control" name="imageUrl" #imageUrl="ngModel">
-        <div class="alert alert-danger" *ngIf="imageUrl.invalid && imageUrl.touched">
-            Gerekli Alan.
-        </div>
+        <input  type="text" class="form-control" name="imageUrl" formControlName="imageUrl" >
+       
     </div>
     <div class="mb-3">
         <label for="categoryId" class="form-label">Kategori Seçiniz.</label>
-        <select required name="categoryId" [(ngModel)]="model.categoryId" class="form-select" #categoryId="ngModel">
+        <select  name="categoryId"  class="form-select" formControlName="categoryId">
             <option value="">Seçiniz</option>
             <option *ngFor="let item of categories" [value]="item.id">{{item.name}} </option>
         </select>
-        <div class="alert alert-danger" *ngIf="categoryId.invalid && categoryId.touched">
-            Gerekli Alan.
-        </div>
     </div>
 
-    <button [disabled]="form.invalid" type="submit"  class="btn btn-primary"> Kaydet </button>
+    <button [disabled]="movieForm.invalid" type="submit"  class="btn btn-primary"> Kaydet </button>
 
 
 </form>
