--- a/src/assets/forms.css
+++ b/src/assets/forms.css
@@ -4,3 +4,9 @@
 .form-control.ng-dirty.ng-valid{
     border-left: 5px solid green;
 }
+.form-select.ng-touched.ng-invalid{
+    border-left: 5px solid red;
+}
+.form-select.ng-dirty.ng-valid{
+    border-left: 5px solid green;
+}
